# operations-debs-contenttranslation-apertium-hbs-mkd

./: AUTHORS  Makefile.am  README  TODO  apertium-hbs-mkd.hbs-mkd.lrx  apertium-hbs-mkd.hbs-mkd.rlx  apertium-hbs-mkd.hbs-mkd.t1x  apertium-hbs-mkd.hbs-mkd.t2x  apertium-hbs-mkd.hbs.metadix  apertium-hbs-mkd.mkd-hbs.lrx  apertium-hbs-mkd.mkd-hbs.t1x  apertium-hbs-mkd.mkd.dix  apertium-hbs-mkd.post-hbs.dix  apertium-hbs-mkd_0.1.0~r57554.orig.tar.gz.delta  apertium-hbs-mkd_0.1.0~r57554.orig.tar.gz.id  apertium-hbs-mkd_0.1.0~r76450.orig.tar.bz2.delta  apertium-hbs-mkd_0.1.0~r76450.orig.tar.bz2.id  configure.ac  hbs-mkd-unsupervised.make  modes.xml  pending-tests.sh  wiki-tests.sh
GCI/: 100glagola.marin.txt  100glagola.txt  100imenica.marin.txt  100imenica.txt  100imenica.zsehanovic.txt  100pridjeva.Marin.txt  200pridjeva.txt  400imenica.txt  check.sh  freq.txt  glagoli.leme.txt  imenice.leme.txt  pridjevi.leme.txt
debian/: changelog  control
dev/: apertium-sh-mk.sh.metadix  bilingual-summary.txt  generateAdapterParadigms.py  generation-summary.sh-mk.txt  generation-test.py  inconsistency-summary.sh  inconsistency.sh  missing-bidix-freq.sh  nouns.ost.txt  testvoc-summary.hbs-mkd.txt  testvoc-summary.mkd-hbs.txt  testvoc.sh  verbAlign.py
dev/partitive_possesive/: cartesian.py  extract_candidates.sh  notes.txt  quantity_nouns.txt
freerbmt2012/: Makefile  apertium-sh-mk.bib  apertium-sh-mk.tex
freerbmt2012/cslipubscollection/: Makefile  README  cslipubs.sty  example-ch00.tex  example-ch01.tex  example-ch02.tex  example.tex  natbib.summary
freerbmt2012/cslipubscollection/example-ch01/: ch01.bib  ch01.tex
freerbmt2012/cslipubscollection/example-ch02/: ch02.bib  ch02.tex
midterm/: article.mk.original.txt  article.sh-mk.2011-08-21.txt  article.sh-mk.2011-08-30.txt  article.sh-mk.txt  article.sh.txt  obradi.sh
personal-nouns/: p-nouns-sh-mk
